# SDIZO-projekt-1

./: CMakeLists.txt  Czaso.cpp  Czaso.h  Drzewo.cpp  Drzewo.h  Kopiec.cpp  Kopiec.h  Lista.cpp  Lista.h  Menu.cpp  Opcje.cpp  Opcje.h  SIZO P.vcxproj  SIZO P.vcxproj.filters  Tablica.cpp  Tablica.h  Testy.cpp  Testy.h
x64/Debug/: vc143.idb
x64/Debug/SIZO P.tlog/: SIZO P.lastbuildstate
